styles.css
/*
  BORDER BOX RESET
*/
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

:root {
  --dark-blue: #1a2236;
  --text-size-p: 14px;
  --text-size-button: 16px;
  --text-size-button-link: 16px;
  --text-size-h1: 50px;
  --text-size-h4: 20px;
  --color-project-tech-stack-tag: #98dede;
}

/* Mobile navbar */
.nav {
  display: flex;
  flex-direction: row-reverse;
  padding: 20px;
  background: no-repeat url("images/decorative_bg_1.png");
  background-size: contain;
}

.nav-items {
  display: none;
}

/* Mobile Generic section styles */
.section-header {
  font: var(--text-size-h1) "Playfair Display", serif;
  color: var(--dark-blue);
  line-height: 100%;
}

.section-button {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  height: 50px;
  padding: 10px 20px;
  background: var(--dark-blue);
  color: white;
  font: var(--text-size-button) "Poppins", serif;
  text-decoration: none;
}

.section-summery {
  padding: 20px 0;
  font: var(--text-size-p) "Poppins", serif;
  color: var(--dark-blue);
}

/* Mobile CTA */
.CTA {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.CTA-container {
  padding: 20px;
}

.CTA-decorative-img {
  width: 100%;
  height: 200px;
  background: repeat-x url("images/decorative_bg_2.png");
  background-size: contain;
}

/* Mobile project cards */
.project-cards {
  display: grid;
  grid-template-columns: 1fr;
}

.project-cards-header {
  margin: 20px;
}

.single-project-card {
  display: flex;
  flex-direction: column;
  gap: 20px;
  background: var(--dark-blue);
  padding-bottom: 10px;
}

.project-card-image {
  width: 100%;
}

.project-card-details {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin: 0 20px 20px 20px;
}

.project-card-title {
  color: white;
  font: 20px "Poppins", serif;
  font-weight: lighter;
}

.project-tech-stack-tags {
  display: flex;
  gap: 10px;
  align-items: center;
}

.project-tech-stack-tags > * {
  display: inline-block;
  padding: 5px 10px;
  color: var(--dark-blue);
  font: 10.33px "Poppins", serif;
  background: var(--color-project-tech-stack-tag);
}

.project-card-more-button {
  width: fit-content;
  border: solid 2px white;
}

.project-card-more-button span {
  font: 16px "Poppins", serif;
}

.project-card-more-button svg {
  fill: #fff;
}

.image-geometry_2,
.image-geometry_3,
.image-geometry_4,
.image-geometry_5 {
  display: none;
}

.about-section {
  display: grid;
  grid-template-columns: 1fr;
}

.about-summery-container {
  padding: 20px;
}

.tech-stack {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 20px;
  padding: 50px;
  background-repeat: no-repeat;
  background-position: bottom right;
}

.tech-stack-category {
  font: var(--text-size-h4) "Poppins", serif;
  font-weight: bolder;
  color: white;
}

.tech-stack-list {
  list-style: none;
  font: 18px "Poppins", serif;
  font-weight: bold;
  color: white;
}

.tech-stack-list li::before {
  display: inline-block;
  width: 1em;
  content: "\2022";
  color: white;
}

.languages {
  background-color: #1c528a;
  background-image: url("images/ic_languages.png");
}

.frameworks {
  background-color: #e2505c;
  background-image: url("images/ic_frameworks.png");
}

.skills {
  background-color: #febf52;
  background-image: url("images/ic_skills.png");
}

.image_dots_with_teal {
  display: none;
}

.form-section {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 100px 20px 20px 20px;
  background-color: #f9f9fa;
  background-image: url("images/decorative_bg_1.png");
  background-repeat: no-repeat;
}

.contact-form {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.form-field {
  display: block;
  width: 100%;
  background: #fff;
  font: var(--text-size-p) "Poppins", serif;
}

.contact-form label {
  padding: 10px;
  border: solid 2px #dfdfe0;
  background-color: #fff;
  color: #7d7c84;
  font: 10px "Poppins", serif;
  border-radius: 4px;
}

.contact-form input {
  border: none;
}

.contact-form input::placeholder {
  color: transparent;
}

.contact-form textarea {
  min-height: 100px;
  border: solid 2px #dfdfe0;
  border-radius: 4px;
  padding: 10px;
}

.contact-form input:focus,
.contact-form textarea:focus {
  outline: none;
}

.contact-form button {
  border: none;
}

.footer {
  display: flex;
  flex-direction: column;
  gap: 20px;
  background: var(--dark-blue);
  padding: 20px;
}

.social_icons {
  display: flex;
  justify-content: space-between;
  gap: 10px;
}

.footer-button {
  width: fit-content;
  color: #92dcdc;
  padding: 0;
}

@media (min-width: 768px) {
  .CTA-my-name {
    animation-name: slide-header;
    animation-duration: 2s;
  }

  @keyframes slide-header {
    from {
      transform: translate(-2000px, 0);
    }
    to {
      transform: translate(0px, 0);
    }
  }

  /* Desktop navbar */
  .nav {
    display: flex;
    padding: 30px;
    border-bottom: solid 2px #dddfe6;
    background: transparent;
  }

  .nav-items {
    display: flex;
    justify-content: center;
    gap: 50px;
    width: 100%;
  }

  .nav-items a {
    position: relative;
    text-decoration: none;
    color: var(--dark-blue);
    font: var(--text-size-p) "Poppins", serif;
    font-weight: 400;
  }

  .nav-items a:hover::after,
  .nav-items a:active::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    width: 70%;
    height: 2px;
    background: var(--dark-blue);
  }

  .nav-icon {
    display: none;
  }

  /* Generic section styles  */
  .section-header {
    font: 110px "Playfair Display", serif;
    color: var(--dark-blue);
    line-height: 100%;
  }

  .section-button {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    width: fit-content;
    height: 70px;
    padding: 10px 50px;
    background: var(--dark-blue);
    color: white;
    font: var(--text-size-button) "Poppins", serif;
    text-decoration: none;
  }

  .section-summery {
    padding: 20px 0;
    font: var(--text-size-p) "Poppins", serif;
    color: var(--dark-blue);
  }

  /* Desktop CTA  */
  .CTA {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .CTA-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 10vw;
    background: no-repeat url("images/image_dots.png");
    background-position: bottom right;
    background-size: 10vw;
  }

  .CTA-decorative-img {
    width: 100%;
    height: 100vh;
    background: url("images/decorative_bg_3.png");
    background-size: contain;
  }

  /* Desktop projects cards */
  .project-cards {
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-gap: 0;
    grid-template-rows: auto;
    padding: 8vw 0;
  }

  .card-1 {
    width: 100%;
    grid-column: 5 / -1;
    grid-row: 1 / 3;
  }

  .card-2 {
    grid-column: 1 / 4;
    grid-row: 4 / 6;
    width: 100%;
  }

  .card-6 {
    width: 100%;
    grid-column: 8 / -1;
    grid-row: 3 / 5;
    width: 100%;
  }

  .card-3 {
    width: 100%;
    grid-column: 1 / 6;
    grid-row: 6 / 10;
  }

  .card-5 {
    width: 100%;
    grid-column: 8 / -1;
    grid-row: 5 / 7;
  }

  .card-4 {
    width: 100%;
    grid-column: 6 / 10;
    grid-row: 10 / 14;
  }

  .image-geometry_2 {
    display: block;
    width: 100%;
    grid-column: 4 / 8;
    grid-row: 3 / 6;
  }

  .image-geometry_3 {
    display: block;
    width: 100%;
    grid-column: 6 / -1;
    grid-row: 7 / 10;
  }

  .image-geometry_4 {
    display: block;
    width: 100%;
    grid-column: 5 / 6;
    grid-row: 10 / 11;
  }

  .image-geometry_5 {
    display: block;
    width: 100%;
    grid-column: 1 / 2;
    grid-row: 10 / 11;
  }

  .project-cards-header {
    grid-column: 1 / 5;
    grid-row: 1 / 3;
    padding-right: 8vw;
    writing-mode: vertical-rl;
    transform: rotate(180deg);
    text-align: right;
    background-image: url("images/image_dots.png");
    background-repeat: no-repeat;
    background-position: bottom left;
    background-size: 10vw;
  }

  .single-project-card {
    background: transparent;
    position: relative;
    cursor: pointer;
  }

  .project-card-image {
    width: 100%;
    height: 100%;
  }

  .project-card-details {
    display: none;
  }

  .single-project-card:hover .project-card-details {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 100%;
    position: absolute;
    bottom: 0;
    z-index: 10;
    padding: 5% 5%;
    margin: 0;
    background-color: var(--dark-blue);
  }

  .project-card-title {
    color: white;
    font: 1.7vw "Poppins", serif;
    font-weight: bold;
  }

  .project-tech-stack-tags {
    display: flex;
    align-items: center;
  }

  .project-tech-stack-tags > * {
    display: inline-block;
    padding: 2% 5%;
    margin-right: 10px;
    color: var(--dark-blue);
    font: 0.8vw "Poppins", serif;
    background: var(--color-project-tech-stack-tag);
  }

  .project-card-more-button {
    padding: 2% 10%;
    height: auto;
    width: fit-content;
    background: #fff;
    color: var(--dark-blue);
  }

  .project-card-more-button span {
    font: 1vw "Poppins", serif;
    font-weight: bolder;
  }

  .project-card-more-button svg {
    fill: var(--dark-blue);
  }


  /* About section  */
  .about-section {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    padding: 10vw;
  }

  .about-summery-container {
    grid-column: 5 / -1;
    grid-row: 1 / 5;
    padding: 5vw;
  }

  .languages {
    grid-column: 1 / 3;
    grid-row: 1 / 4;
    margin: 0;
    padding: 5vw;
  }

  .frameworks {
    grid-column: 3 / 5;
    grid-row: 1 / 4;
    margin: 0;
    padding: 5vw;
  }

  .skills {
    grid-column: 1 / 3;
    grid-row: 4 / 7;
    margin: 0;
    padding: 5vw;
  }

  .image_dots_with_teal {
    grid-column: 4 / 5;
    grid-row: 6 / 7;
    display: block;
    width: 100%;
    height: 100%;
  }

  /*  Form section */
  .form-section {
    padding: 10vw 30vw;
    background-image: url("images/image-geometry_6.png"), url("images/image-geometry_7.png");
    background-position: top left, bottom right;
  }

  /* Footer */
  .footer {
    flex-direction: row;
    justify-content: space-between;
    gap: 20px;
    background: var(--dark-blue);
    padding: 2vw 10vw;
  }

  .footer-button {
    color: #92dcdc;
    padding: 0;
  }

  .social_icons {
    gap: 40px;
    align-items: center;
  }

  .CTA-button:hover {
    animation-name: pop-up;
    animation-duration: 1s;
  }

  @keyframes pop-up {
    from {transform: scale(1)}
    to {transform: scale(1.2)}
  }
  .CTA-self-intro {
    animation-name: slide-intro;
    animation-duration: 3s;
  }
  @keyframes slide-intro {
    from {
      transform: translate(-2000px, 0);
    }
    to {
      transform: translate(0px, 0);
    }
  }
}

